--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.26",
-    "axios": "^1.5.0",
+    "crypto-js": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -21,6 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "craco-alias": "^3.0.1",
     "eslint": "^8.22.0",
     "eslint-config-airbnb": "^19.0.4",
