--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "lint": "eslint src",
     "lint:fix": "npm run lint -- --fix",
     "eslint": "npm run lint && npm run lint:fix",
-    "stylelint": "npx stylelint \"**/*.tsx\""
+    "stylelint": "npx stylelint \"**/*.tsx\"",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
