Headers and readme files updated

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -11,8 +11,8 @@
             "@components/": [
                 "src/components/"
             ],
-            "@helper/": [
-                "src/helper/"
+            "@helpers/": [
+                "src/helpers/"
             ],
             "@interface/": [
                 "./src/interface/"
